--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span>Happy Birtday</span>
     </div>
     <div class="button">
-        <button>
+        <button">
             <a href="flower.html">Click here...</a>
         </button>
         
