refactor: edit text

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>E</span>
-        <span>Y</span>
+        <span>N</span>
+        <span>V</span>
+        <span>V</span>
         <!-- <span>L</span>
         <span>O</span>
         <span>B</span> -->
     </div>
     <div class="description">
-        <span>Happy Birtday</span>
+        <span>Một chút magic nhỏ! ✨✨</span>
     </div>
     <div class="button">
         <button>
