fix: flower animation

--- a/flower.html
+++ b/flower.html
@@ -9,9 +9,9 @@
     <title>flowers</title>
 </head>
 <body class="container">
-    <audio id="birthdayMusic"
+    <!-- <audio id="birthdayMusic"
         src="https://jennierubyjanenini.github.io/Music-K-Files/happy%20birthday%20to%20you%20female%20voice%20wishes.mp3">
-    </audio>
+    </audio> -->
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
     <div class="night"></div>
     <div class="flowers">
