refactor: edit text

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>N</span>
-        <span>V</span>
-        <span>V</span>
-        <!-- <span>L</span>
-        <span>O</span>
-        <span>B</span> -->
+        <span>M</span>
+        <span>A</span>
+        <span>G</span>
+        <span>I</span>
+        <span>C</span>
+        <!-- <span>B</span> -->
     </div>
     <div class="description">
-        <span>Một chút magic nhỏ! ✨✨</span>
+        <span>🪄🪄</span>
     </div>
     <div class="button">
         <button>
